--- a/behaviortracker/package.json
+++ b/behaviortracker/package.json
@@ -11,13 +11,16 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
-    "firebase": "^11.5.0",
+    "@reduxjs/toolkit": "^2.7.0",
+    "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.4.0"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.4.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
