--- a/behaviortracker/package.json
+++ b/behaviortracker/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@heroui/react": "^2.7.6",
     "@reduxjs/toolkit": "^2.7.0",
     "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
