--- a/behaviortracker/package.json
+++ b/behaviortracker/package.json
@@ -16,6 +16,8 @@
     "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
     "next": "15.2.4",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.9.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
